Fix scrollbar style

--- a/core/app/globals.css
+++ b/core/app/globals.css
@@ -16,6 +16,10 @@
 		@apply line-clamp-none;
 	}
 
+	*::-webkit-scrollbar {
+		@apply w-2;
+	}
+
 	*::-webkit-scrollbar-track {
 		@apply hidden;
 	}
